Started making corrections to the code.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hangman Game</title>
+  <title>Psychic Game</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-  <p>The computer choose: <span id="computerPick"></span></p>
-  <p>Number of guesses remaing: <span id="remainingGuesses">12</span></p>
-  <p>Your guesses so far: <span id="printGuesses"></span></p>
-  <p>Wins: <span id="win"></span></p>
-  <p>Losses: <span id="lost"></span></p>
+  <p>Guess what letter I'm thinking of...</p>
+  <p>Number of guesses remaing: <span id="guesses-left">10</span></p>
+  <p>Your guesses so far: <span id="guesses-attempted"></span></p>
+  <p>Wins: <span id="wins"></span></p>
+  <p>Loses: <span id="loses"></span></p>
 <script src="assets/js/game.js"></script>
 </body>
 </html>
